--- a/frontend_atividade.html
+++ b/frontend_atividade.html
@@ -59,21 +59,18 @@
         color: var(--muted);
         margin: 4px 0 0;
       }
-
       .card {
         background: var(--card);
         border-radius: 14px;
         padding: 28px;
         box-shadow: var(--shadow);
       }
-
       form.row {
         display: grid;
         grid-template-columns: 1fr 360px;
         gap: 22px;
         align-items: start;
       }
-
       .left {
         min-height: 160px;
       }
@@ -120,13 +117,11 @@
       .btn:active {
         transform: translateY(1px);
       }
-
       .actions {
         display: flex;
         gap: 12px;
         align-items: center;
       }
-
       .preview-list {
         display: flex;
         flex-direction: row;
@@ -161,21 +156,6 @@
         border-radius: 6px;
         font-size: 10px;
       }
-      .preview.invalid {
-        border-color: rgba(239, 68, 68, 0.9);
-        box-shadow: 0 6px 18px rgba(239, 68, 68, 0.06);
-      }
-      .preview .bad {
-        position: absolute;
-        left: 6px;
-        top: 6px;
-        background: rgba(239, 68, 68, 0.9);
-        color: white;
-        padding: 2px 6px;
-        border-radius: 6px;
-        font-size: 10px;
-      }
-
       .right {
         padding: 14px;
         border-radius: 10px;
@@ -187,7 +167,6 @@
         font-size: 13px;
         margin-bottom: 12px;
       }
-
       .msg {
         padding: 10px;
         border-radius: 8px;
@@ -204,14 +183,12 @@
         color: var(--danger);
         border: 1px solid rgba(239, 68, 68, 0.12);
       }
-
       footer {
         margin-top: 14px;
         text-align: right;
         color: var(--muted);
         font-size: 13px;
       }
-
       @media (max-width: 820px) {
         form.row {
           grid-template-columns: 1fr;
@@ -231,7 +208,6 @@
           </p>
         </div>
       </header>
-
       <div class="card">
         <form id="formUpload" class="row">
           <div class="left">
@@ -244,8 +220,8 @@
                   align-items: center;
                 "
               >
-                <strong>Arraste e solte imagens aqui</strong>
-                <small style="color: var(--muted)"
+                <strong>Arraste e solte imagens aqui</strong
+                ><small style="color: var(--muted)"
                   >PNG ou JPEG — até 10 arquivos</small
                 >
               </div>
@@ -262,7 +238,6 @@
               />
               <div id="preview" class="preview-list" aria-live="polite"></div>
             </div>
-
             <div
               style="
                 margin-top: 14px;
@@ -287,12 +262,10 @@
               O backend valida: somente PNG/JPEG, máximo 5MB por arquivo, de 1 a
               10 arquivos.
             </div>
-
             <div class="actions">
               <button id="btnEnviar" class="btn" type="submit">
-                Enviar Arquivos
-              </button>
-              <button
+                Enviar Arquivos</button
+              ><button
                 id="btnClear"
                 class="btn"
                 type="button"
@@ -301,17 +274,58 @@
                 Limpar
               </button>
             </div>
-
             <div id="mensagem" aria-live="polite"></div>
             <footer>
-              Endereço de envio: <code>http://localhost:3000/upload</code>
+              Endereço de envio:
+              <code id="backendInfo">detectando...</code> &nbsp;|&nbsp; Página:
+              <code id="pageOrigin">detectando...</code>
             </footer>
           </aside>
         </form>
       </div>
     </div>
-
     <script>
+      // Backend autodiscovery: tenta 3000 depois 3001 e retorna a base URL
+      let backendBase = null;
+      const backendInfoEl = document.getElementById("backendInfo");
+
+      async function fetchWithTimeout(url, opts = {}, timeout = 1500) {
+        const controller = new AbortController();
+        const id = setTimeout(() => controller.abort(), timeout);
+        try {
+          const res = await fetch(url, { signal: controller.signal, ...opts });
+          clearTimeout(id);
+          return res;
+        } catch (e) {
+          clearTimeout(id);
+          throw e;
+        }
+      }
+
+      async function resolveBackend() {
+        const candidates = ["http://localhost:3000", "http://localhost:3001"];
+        for (const base of candidates) {
+          try {
+            const res = await fetchWithTimeout(
+              base + "/",
+              { method: "GET" },
+              1200
+            );
+            if (res && res.ok) {
+              backendBase = base;
+              backendInfoEl.textContent = backendBase + "/upload";
+              return backendBase;
+            }
+          } catch (e) {
+            // ignora e tenta o próximo
+          }
+        }
+        backendBase = null;
+        backendInfoEl.textContent =
+          "Nenhum backend detectado (esperado em :3000 ou :3001)";
+        return null;
+      }
+
       const arquivoInput = document.getElementById("arquivoInput");
       const dropzone = document.getElementById("dropzone");
       const preview = document.getElementById("preview");
@@ -372,42 +386,12 @@
             ? " arquivo selecionado"
             : " arquivos selecionados");
 
-        // regras do backend (espelhadas no cliente para melhor UX)
-        const maxFiles = 10;
-        const maxSize = 5 * 1024 * 1024; // 5MB
-        const allowedTypes = ["image/png", "image/jpeg"];
-        let anyInvalid = false;
-
-        // Em vez de bloquear, coletemos avisos e exibamos, mas permitimos o envio
-        const warnings = [];
-        if (files.length > maxFiles) {
-          warnings.push(
-            `Você selecionou ${files.length} arquivos — o máximo recomendado é ${maxFiles}. O backend pode retornar erro.`
-          );
-        }
-
         for (const file of files) {
           const div = document.createElement("div");
           div.className = "preview";
           const small = document.createElement("small");
           small.textContent = prettyBytes(file.size);
           div.appendChild(small);
-
-          // validações por arquivo
-          const reasons = [];
-          if (!allowedTypes.includes(file.type)) reasons.push("Tipo inválido");
-          if (file.size > maxSize) reasons.push("Arquivo maior que 5MB");
-
-          if (reasons.length > 0) {
-            anyInvalid = true;
-            div.classList.add("invalid");
-            const bad = document.createElement("div");
-            bad.className = "bad";
-            bad.textContent = "Inválido";
-            div.appendChild(bad);
-            // tooltip / motivo acessível
-            div.title = reasons.join(" - ");
-          }
 
           if (file.type.startsWith("image/")) {
             const img = document.createElement("img");
@@ -421,25 +405,7 @@
           } else {
             div.textContent = file.name;
           }
-
           preview.appendChild(div);
-        }
-
-        // se houver arquivos inválidos, mostramos aviso resumido
-        if (anyInvalid) {
-          showMessage(
-            "error",
-            "Existem arquivos inválidos na seleção. Corrija-os antes de enviar."
-          );
-        } else {
-          // limpa mensagens de erro relacionadas à seleção anterior
-          const current = mensagem.querySelector(".msg");
-          if (current && current.classList.contains("error"))
-            mensagem.innerHTML = "";
-        }
-        if (warnings.length > 0) {
-          showMessage("error", warnings.join(" ; "));
-          // prosseguir com o envio para que o backend responda (útil para testar mensagens do Multer)
         }
       }
 
@@ -458,7 +424,7 @@
 
         const files = arquivoInput.files;
 
-        // Validação cliente: coletar avisos, mas NÃO BLOQUEAR o envio.
+        // Validação cliente (bloqueante) — regras do backend
         if (!files || files.length === 0) {
           showMessage("error", "Selecione ao menos 1 arquivo para enviar.");
           return;
@@ -466,63 +432,64 @@
 
         const maxFiles = 10;
         const maxSize = 5 * 1024 * 1024; // 5MB
-        const allowedTypes = ["image/png", "image/jpeg"];
+        const allowed = ["image/png", "image/jpeg"];
 
-        const warnings = [];
-        if (files.length > maxFiles)
-          warnings.push(
-            `Você selecionou ${files.length} arquivos — o máximo recomendado é ${maxFiles}.`
+        if (files.length < 1 || files.length > maxFiles) {
+          showMessage(
+            "error",
+            `Número de arquivos inválido: ${files.length}. Deve ser entre 1 e ${maxFiles}.`
           );
-
-        for (const f of files) {
-          if (!allowedTypes.includes(f.type))
-            warnings.push(`Tipo inválido: ${f.name}`);
-          if (f.size > maxSize) warnings.push(`Maior que 5MB: ${f.name}`);
+          return;
         }
 
-        if (warnings.length > 0) showMessage("error", warnings.join(" ; "));
+        for (const f of files) {
+          if (!allowed.includes(f.type)) {
+            showMessage("error", `Tipo de arquivo inválido: ${f.name}`);
+            return;
+          }
+          if (f.size > maxSize) {
+            showMessage("error", `Arquivo maior que 5MB: ${f.name}`);
+            return;
+          }
+        }
 
-        // Montar FormData
+        // Montar FormData e anexar cada arquivo com a chave 'meusArquivos'
         const formData = new FormData();
-
-        // Iterar a FileList e anexar cada arquivo com a chave 'meusArquivos'
         for (const file of files) {
           formData.append("meusArquivos", file);
         }
 
-        // Fazer o fetch para o endpoint do backend
+        // Envia explicitamente para o backend local
+        const url = "http://localhost:3000/upload";
         try {
-          const response = await fetch("http://localhost:3000/upload", {
-            method: "POST",
-            body: formData,
-            // NÃO definir headers 'Content-Type' ao enviar FormData;
-          });
+          const response = await fetch(url, { method: "POST", body: formData });
 
-          // Ler resposta como texto primeiro (pode ser JSON ou texto simples)
           const text = await response.text();
-          let payload;
+          let payload = {};
           try {
             payload = JSON.parse(text);
           } catch (e) {
-            payload = { message: text };
+            payload.message = text;
           }
 
           if (response.ok) {
-            const msg = payload.message || "Upload realizado com sucesso.";
-            showMessage("success", msg);
-            // Opcional: limpar seleção
-            // arquivoInput.value = '';
+            showMessage(
+              "success",
+              payload.message || "Upload realizado com sucesso."
+            );
+            // limpar UI
+            arquivoInput.value = "";
+            preview.innerHTML = "";
+            statusInfo.textContent = "Nenhum arquivo escolhido";
           } else {
-            // Mostrar mensagem de erro enviada pelo backend (por exemplo multer)
             const msg =
               payload.message || payload.error || text || "Erro no upload.";
             showMessage("error", `Falha no upload: ${msg}`);
           }
         } catch (err) {
-          // Erro de rede ou outro inesperado
           showMessage(
             "error",
-            "Não foi possível contatar o servidor. Verifique se o backend está rodando em http://localhost:3000"
+            "Não foi possível contatar o servidor em http://localhost:3000/upload"
           );
           console.error(err);
         }
@@ -536,8 +503,19 @@
         mensagem.appendChild(div);
       }
 
-      // Inicializa preview vazio
+      // Mostrar host:porta da página (ex.: 127.0.0.1:5500)
+      const pageOriginEl = document.getElementById("pageOrigin");
+      try {
+        pageOriginEl.textContent =
+          window.location.host ||
+          window.location.origin + window.location.pathname;
+      } catch (e) {
+        pageOriginEl.textContent = window.location.hostname;
+      }
+
+      // Inicializa preview vazio e resolve backend em background
       atualizarPreview();
+      resolveBackend();
     </script>
   </body>
 </html>
